[metadata]
name = anisible_pyvmomi
author = Jaroslav Henner
author-email = jhenner@redhat.com
summary = Tool create vCenter deployments.
license = GNU-GPL2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    vmware

[files]
modules =
	actions
	deployment
	all_in_one

[entry_points]
console_scripts =
	deployment = deployment:cli_main
	all-in-one = all_in_one:cli_main
oslo.config.opts =
	deployment = deployment:list_opts
	all-in-one = all_in_one:list_opts
